adjust colors and correct alignment

--- a/app/assets/stylesheets/sage/docs/_status_key.scss
+++ b/app/assets/stylesheets/sage/docs/_status_key.scss
@@ -18,6 +18,7 @@
   }
 
   &__icon {
+    display: inline-block;
     flex: 0 0 $status-key-icon-size;
     width: $status-key-icon-size;
     height: $status-key-icon-size;
